--- a/languages/upfront_thx.pot
+++ b/languages/upfront_thx.pot
@@ -1,16 +1,16 @@
-# Copyright (C) 2017 WPMU DEV
+# Copyright (C) 2023 WMS N@W
 # This file is distributed under the GPLv2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Upfront Builder 1.1.9\n"
+"Project-Id-Version: Upfront Builder 1.2.1\n"
 "Report-Msgid-Bugs-To: "
 "http://wordpress.org/support/plugin/upfront-theme-exporter\n"
-"POT-Creation-Date: 2017-07-25 09:12:50+00:00\n"
+"POT-Creation-Date: 2023-02-08 09:12:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2017-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: DerN3rd <webmaster@n3rds.work>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "X-Generator: grunt-wp-i18n 0.4.9\n"
 
