--- a/languages/upfront_thx-fr_FR.po
+++ b/languages/upfront_thx-fr_FR.po
@@ -780,8 +780,8 @@ msgstr ""
 "des thèmes ClassicPress."
 
 #. Author of the plugin/theme
-msgid "WMS N@W"
-msgstr "WMS N@W"
+msgid "PSOURCE"
+msgstr "PSOURCE"
 
 #. Author URI of the plugin/theme
 msgid "https://n3rds.work"
