--- a/languages/upfront_thx-it_IT.po
+++ b/languages/upfront_thx-it_IT.po
@@ -778,8 +778,8 @@ msgstr ""
 
 #. Author of the plugin/theme
 #, fuzzy
-msgid "WMS N@W"
-msgstr "WMS N@W"
+msgid "PSOURCE"
+msgstr "PSOURCE"
 
 #. Author URI of the plugin/theme
 #, fuzzy
