--- a/languages/upfront_thx-en_US.po
+++ b/languages/upfront_thx-en_US.po
@@ -572,8 +572,8 @@ msgid "Wird geladen..."
 msgstr "Loading..."
 
 #. Author of the plugin/theme
-msgid "WMS N@W"
-msgstr "WMS N@W"
+msgid "PSOURCE"
+msgstr "PSOURCE"
 
 #: lib/class_thx_l10n.php:85 lib/class_thx_l10n.php:86
 msgid "Wrapper"
